# cmake_learning

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  answer.cpp  answer.hpp  main.cpp
curl_wrapper/: CMakeLists.txt  curl_wrapper.cpp
curl_wrapper/include/curl_wrapper/: curl_wrapper.hpp
wolfram/: CMakeLists.txt  alpha.cpp
wolfram/include/wolfram/: alpha.hpp
